# ibkr-portfolio-analyzer

./: .gitignore  README.md
.github/workflows/: ci.yml  desktop-release.yml
ai-portfolio-intelligence/: README.md  package-lock.json  package.json
ai-portfolio-intelligence/apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  scratch_test_dedup.py
ai-portfolio-intelligence/apps/desktop/: package.json
ai-portfolio-intelligence/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ai-portfolio-intelligence/apps/desktop/src-tauri/binaries/: .gitkeep
ai-portfolio-intelligence/apps/desktop/src-tauri/capabilities/: default.json
ai-portfolio-intelligence/apps/desktop/src-tauri/icons/: henry.w@example.net  icon.icns
ai-portfolio-intelligence/apps/desktop/src-tauri/src/: backend.rs  main.rs  secure_runtime.rs
ai-portfolio-intelligence/docs/: OSS_INCORPORATION_PLAN.md  PRODUCT_SCOPE.md  RELEASE_AND_SIGNING.md  ai-workflow.md  api.md  architecture.md  compliance-boundaries.md  ibkr-readonly-setup.md  no-trading-policy.md  scoring-framework.md  security.md
ai-portfolio-intelligence/infra/: .env.production.example  docker-compose.prod.yml  docker-compose.yml
ai-portfolio-intelligence/scripts/: build-backend-sidecar.py  build-desktop-installer.py  build-macos-installer.py  desktop_local_smoke.py  desktop_restore_smoke.py  prepare-tauri-binaries.py  run_personal_desktop.py  set-desktop-signing-secrets.sh  smoke-packaged-sidecar.py  smoke-tauri-app-launch.py
(+732 files in other folders)
